--- a/gradle.properties
+++ b/gradle.properties
@@ -11,6 +11,7 @@ releasePluginVersion=2.6.0
 testngVersion=7.4.0
 eclipseLsp4jVersion=0.12.0
 ballerinaGradlePluginVersion=1.0.0
+jacocoVersion=0.8.8
 
 # Standard Library Dependencies
 # Level 01
