--- a/compiler-plugin-tests/build.gradle
+++ b/compiler-plugin-tests/build.gradle
@@ -90,7 +90,7 @@ jacocoTestReport {
     reports {
         xml.required = true
         csv.required = false
-        html.required = false
+        html.required = true
     }
     sourceSets project(':graphql-compiler-plugin').sourceSets.main
 }
