--- a/.github/workflows/build-timestamped-master.yml
+++ b/.github/workflows/build-timestamped-master.yml
@@ -42,7 +42,7 @@ jobs:
                     packagePAT: ${{ secrets.BALLERINA_BOT_TOKEN }}
                     publishUser: ${{ secrets.BALLERINA_BOT_USERNAME }}
                     publishPAT: ${{ secrets.BALLERINA_BOT_TOKEN }}
-                run: ./gradlew publish --no-daemon --scan
+                run: ./gradlew build --rerun-tasks --no-daemon --scan
 
             -   name: Generate CodeCov Report
                 uses: codecov/codecov-action@v2
