Update ingress.yaml with c2c generated service name

--- a/load-tests/book_reviews_mutation/deployment/ingress.yaml
+++ b/load-tests/book_reviews_mutation/deployment/ingress.yaml
@@ -15,6 +15,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: book-reviews-mutation-svc
+                name: book-reviews-mu
                 port:
                   number: 9000
