Update versions for update 5

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.caching=true
 group=io.ballerina.stdlib
 version=1.7.0-SNAPSHOT
-ballerinaLangVersion=2201.5.0-20230329-131700-0f497d97
+ballerinaLangVersion=2201.5.0-20230401-003700-e9cbdd41
 
 checkstylePluginVersion=8.18
 spotbugsPluginVersion=4.5.1
@@ -17,32 +17,32 @@ jacocoVersion=0.8.8
 # Level 01
 stdlibConstraintVersion=1.1.0
 stdlibIoVersion=1.4.0
-stdlibRegexVersion=1.3.2
+stdlibRegexVersion=1.4.0-20230403-110300-c6fcee0
 stdlibTimeVersion=2.2.4
 stdlibUrlVersion=2.2.3
 
 # Level 02
 stdlibCryptoVersion=2.3.0
-stdlibLogVersion=2.6.0
+stdlibLogVersion=2.7.0-20230403-113200-3f02893
 stdlibOsVersion=1.6.0
-stdlibTaskVersion=2.3.0
+stdlibTaskVersion=2.3.1
 
 # Level 03
 stdlibCacheVersion=3.4.0
-stdlibFileVersion=1.6.0
-stdlibMimeVersion=2.6.0
-stdlibUuidVersion=1.4.0
+stdlibFileVersion=1.7.0-20230403-120300-abaa227
+stdlibMimeVersion=2.7.0-20230403-120400-3dbbe01
+stdlibUuidVersion=1.5.0-20230403-120800-25b6e6b
 
 # Level 04
-stdlibAuthVersion=2.6.0
-stdlibJwtVersion=2.6.0
-stdlibOAuth2Version=2.6.1
+stdlibAuthVersion=2.7.0-20230403-123900-471faca
+stdlibJwtVersion=2.7.0-20230403-130700-9dc5332
+stdlibOAuth2Version=2.7.0-20230403-125000-d0ca33c
 
 # Level 06
-stdlibHttpVersion=2.7.0-20230328-232600-2341ac6
+stdlibHttpVersion=2.7.0-20230403-150500-d370511
 
 # Level 07
-stdlibWebsocketVersion=2.7.0-20230330-090400-3843e25
+stdlibWebsocketVersion=2.7.0-20230403-163800-fc1d36b
 
 # Ballerinax Observer
 observeVersion=1.0.7
