--- a/gradle.properties
+++ b/gradle.properties
@@ -17,32 +17,31 @@ jacocoVersion=0.8.8
 # Level 01
 stdlibConstraintVersion=1.1.0
 stdlibIoVersion=1.4.0
-stdlibRegexVersion=1.4.0
 stdlibTimeVersion=2.2.4
 stdlibUrlVersion=2.2.3
 
 # Level 02
 stdlibCryptoVersion=2.3.0
-stdlibLogVersion=2.7.0
+stdlibLogVersion=2.7.1-20230426-134900-2076e24
 stdlibOsVersion=1.6.0
-stdlibTaskVersion=2.3.1
+stdlibTaskVersion=2.3.2
 
 # Level 03
 stdlibCacheVersion=3.4.0
-stdlibFileVersion=1.7.0
-stdlibMimeVersion=2.7.0
-stdlibUuidVersion=1.5.0
+stdlibFileVersion=1.7.1-20230426-145900-748058d
+stdlibMimeVersion=2.7.1-20230426-174700-fa17cd3
+stdlibUuidVersion=1.5.1-20230426-134700-1b44f72
 
 # Level 04
-stdlibAuthVersion=2.7.0
-stdlibJwtVersion=2.7.0
-stdlibOAuth2Version=2.7.0
+stdlibAuthVersion=2.7.1-20230426-151300-6b9f314
+stdlibJwtVersion=2.7.1-20230427-123000-f1f10bf
+stdlibOAuth2Version=2.7.1-20230426-163900-b9c951b
 
 # Level 06
-stdlibHttpVersion=2.7.0
+stdlibHttpVersion=2.7.1-20230427-161400-631151b
 
 # Level 07
-stdlibWebsocketVersion=2.7.1
+stdlibWebsocketVersion=2.7.1-20230428-133600-30df76b
 
 # Ballerinax Observer
 observeVersion=1.0.7
