--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 org.gradle.caching=true
 group=io.ballerina.stdlib
-version=1.8.0-SNAPSHOT
+version=1.9.0-SNAPSHOT
 ballerinaLangVersion=2201.5.0
 
 checkstylePluginVersion=8.18
@@ -15,33 +15,33 @@ jacocoVersion=0.8.8
 
 # Standard Library Dependencies
 # Level 01
-stdlibConstraintVersion=1.1.0
-stdlibIoVersion=1.4.0
+stdlibIoVersion=1.4.1
 stdlibTimeVersion=2.2.4
 stdlibUrlVersion=2.2.3
 
 # Level 02
-stdlibCryptoVersion=2.3.0
-stdlibLogVersion=2.7.1-20230426-134900-2076e24
+stdlibConstraintVersion=1.2.0-20230518-182800-2681a7b
+stdlibCryptoVersion=2.3.1-20230522-113000-73ae1e2
+stdlibLogVersion=2.7.1-20230522-155500-d73bdb5
 stdlibOsVersion=1.6.0
 stdlibTaskVersion=2.3.2
 
 # Level 03
-stdlibCacheVersion=3.4.0
-stdlibFileVersion=1.7.1-20230426-145900-748058d
-stdlibMimeVersion=2.7.1-20230426-174700-fa17cd3
-stdlibUuidVersion=1.5.1-20230426-134700-1b44f72
+stdlibCacheVersion=3.5.0-20230523-104800-1103165
+stdlibFileVersion=1.7.1-20230523-104800-e56ed72
+stdlibMimeVersion=2.7.1-20230523-092600-8dee40d
+stdlibUuidVersion=1.5.1-20230523-104800-89d91a7
 
 # Level 04
-stdlibAuthVersion=2.7.1-20230426-151300-6b9f314
-stdlibJwtVersion=2.7.1-20230427-123000-f1f10bf
-stdlibOAuth2Version=2.7.1-20230426-163900-b9c951b
+stdlibAuthVersion=2.8.0-20230523-114200-ee19e22
+stdlibJwtVersion=2.8.0-20230523-142400-24ef641
+stdlibOAuth2Version=2.8.0-20230523-120200-d1e3253
 
 # Level 06
-stdlibHttpVersion=2.7.1-20230427-161400-631151b
+stdlibHttpVersion=2.8.0-20230523-165700-8e0a30b
 
 # Level 07
-stdlibWebsocketVersion=2.7.2-20230518-092600-1304f23
+stdlibWebsocketVersion=2.8.0-20230524-082900-ee0eb00
 
 # Ballerinax Observer
 observeVersion=1.0.7
