--- a/examples/build.gradle
+++ b/examples/build.gradle
@@ -24,7 +24,7 @@ description = 'Ballerina - GraphQL Compiler Plugin Tests'
 
 def ballerinaDist = "${project.rootDir}/target/ballerina-runtime"
 def examples = ["snowtooth", "starwars", "news_alerts"]
-def nativeFlag = ""
+def graalvmFlag = ""
 
 dependencies {
     implementation group: 'org.ballerinalang', name: 'ballerina-lang', version: "${ballerinaLangVersion}"
@@ -41,8 +41,8 @@ clean {
 }
 
 task testExamples {
-    if (project.hasProperty("balNativeTest")) {
-        nativeFlag = "--native"
+    if (project.hasProperty("balGraalVMTest")) {
+        graalvmFlag = "--graalvm"
     }
     doLast {
         examples.each { example ->
@@ -50,9 +50,9 @@ task testExamples {
                 exec {
                     workingDir project.projectDir
                     if (Os.isFamily(Os.FAMILY_WINDOWS)) {
-                        commandLine 'cmd', '/c', "${ballerinaDist}/bin/bal.bat test ${nativeFlag} ${example} && exit %%ERRORLEVEL%%"
+                        commandLine 'cmd', '/c', "${ballerinaDist}/bin/bal.bat test ${graalvmFlag} ${example} && exit %%ERRORLEVEL%%"
                     } else {
-                        commandLine 'sh', '-c', "${ballerinaDist}/bin/bal test ${nativeFlag} ${example}"
+                        commandLine 'sh', '-c', "${ballerinaDist}/bin/bal test ${graalvmFlag} ${example}"
                     }
                 }
             } catch (Exception e) {
