--- a/ballerina/Ballerina.toml
+++ b/ballerina/Ballerina.toml
@@ -1,7 +1,7 @@
 [package]
 org = "ballerina"
 name = "graphql"
-version = "1.7.2"
+version = "1.7.1"
 authors = ["Ballerina"]
 export=["graphql", "graphql.subgraph"]
 keywords = ["gql", "network", "query", "service"]
@@ -13,11 +13,11 @@ distribution = "2201.5.0"
 [[platform.java11.dependency]]
 groupId = "io.ballerina.stdlib"
 artifactId = "graphql-native"
-version = "1.7.2"
-path = "../native/build/libs/graphql-native-1.7.2-SNAPSHOT.jar"
+version = "1.7.1"
+path = "../native/build/libs/graphql-native-1.7.1.jar"
 
 [[platform.java11.dependency]]
 groupId = "io.ballerina.stdlib"
 artifactId = "graphql-compiler-plugin"
-version = "1.7.2"
-path = "../commons/build/libs/graphql-commons-1.7.2-SNAPSHOT.jar"
+version = "1.7.1"
+path = "../commons/build/libs/graphql-commons-1.7.1.jar"
