--- a/gradle.properties
+++ b/gradle.properties
@@ -38,7 +38,7 @@ stdlibJwtVersion=2.8.0
 stdlibOAuth2Version=2.8.0
 
 # Level 06
-stdlibHttpVersion=2.8.0
+stdlibHttpVersion=2.9.0-20230615-085500-8304d9a
 
 # Level 07
 stdlibWebsocketVersion=2.8.0
