Mark graphql module as GraalVM compatible

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.caching=true
 group=io.ballerina.stdlib
-version=1.8.1-SNAPSHOT
-ballerinaLangVersion=2201.5.0
+version=1.9.0-SNAPSHOT
+ballerinaLangVersion=2201.6.0-20230614-102000-d1aade7d
 
 checkstylePluginVersion=8.18
 spotbugsPluginVersion=4.5.1
@@ -15,34 +15,34 @@ jacocoVersion=0.8.8
 
 # Standard Library Dependencies
 # Level 01
-stdlibIoVersion=1.4.1
-stdlibTimeVersion=2.2.4
-stdlibUrlVersion=2.2.3
+stdlibIoVersion=1.5.0-20230614-150600-6387868
+stdlibTimeVersion=2.3.0-20230614-151000-47027a9
+stdlibUrlVersion=2.3.0-20230614-141500-7a93dbb
 
 # Level 02
-stdlibConstraintVersion=1.2.0
-stdlibCryptoVersion=2.3.1
-stdlibLogVersion=2.7.1
-stdlibOsVersion=1.6.0
-stdlibTaskVersion=2.3.2
+stdlibConstraintVersion=1.3.0-20230614-161700-f1a0fb3
+stdlibCryptoVersion=2.4.0-20230614-154200-1745f32
+stdlibLogVersion=2.8.0-20230614-193000-9f7edcd
+stdlibOsVersion=1.7.0-20230614-193300-1fcd23f
+stdlibTaskVersion=2.4.0-20230614-193200-996af8b
 
 # Level 03
-stdlibCacheVersion=3.5.0
-stdlibFileVersion=1.7.1
-stdlibMimeVersion=2.7.1
-stdlibUuidVersion=1.5.1
+stdlibCacheVersion=3.6.0-20230615-100200-8b6d451
+stdlibFileVersion=1.8.0-20230615-104200-e8d70cb
+stdlibMimeVersion=2.8.0-20230614-201600-ffa7634
+stdlibUuidVersion=1.6.0-20230615-104100-07dba2e
 
 # Level 04
-stdlibAuthVersion=2.8.0
-stdlibJwtVersion=2.8.0
-stdlibOAuth2Version=2.8.0
+stdlibAuthVersion=2.9.0-20230615-113100-5d474fe
+stdlibJwtVersion=2.9.0-20230615-112200-5ee0b41
+stdlibOAuth2Version=2.9.0-20230615-113100-5eaea6c
 
 # Level 06
-stdlibHttpVersion=2.9.0-20230615-085500-8304d9a
+stdlibHttpVersion=2.9.0-20230615-133700-5613017
 
 # Level 07
-stdlibWebsocketVersion=2.8.0
+stdlibWebsocketVersion=2.9.0-20230615-161200-30fe1a8
 
 # Ballerinax Observer
-observeVersion=1.0.7
-observeInternalVersion=1.0.6
+observeVersion=1.1.0-20230614-170700-802c054
+observeInternalVersion=1.1.0-20230614-173400-75b87c5
