Update Simple GitHub Issue Tracker example

--- a/examples/simple_github_issue_tracker/Ballerina.toml
+++ b/examples/simple_github_issue_tracker/Ballerina.toml
@@ -1,6 +1,6 @@
 [package]
-org = "dimuthu"
-name = "downscaled_github_issue_tracker"
+org = "ballerina"
+name = "simple_github_issue_tracker"
 version = "0.1.0"
 distribution = "2201.6.0"
 
