--- a/ballerina/CompilerPlugin.toml
+++ b/ballerina/CompilerPlugin.toml
@@ -3,7 +3,7 @@ id = "graphql-compiler-plugin"
 class = "io.ballerina.stdlib.graphql.compiler.GraphqlCompilerPlugin"
 
 [[dependency]]
-path = "../compiler-plugin/build/libs/graphql-compiler-plugin-1.9.0.jar"
+path = "../compiler-plugin/build/libs/graphql-compiler-plugin-1.9.1-SNAPSHOT.jar"
 
 [[dependency]]
-path = "../commons/build/libs/graphql-commons-1.9.0.jar"
+path = "../commons/build/libs/graphql-commons-1.9.1-SNAPSHOT.jar"
