--- a/ballerina/Ballerina.toml
+++ b/ballerina/Ballerina.toml
@@ -1,7 +1,7 @@
 [package]
 org = "ballerina"
 name = "graphql"
-version = "1.9.0"
+version = "1.9.1"
 authors = ["Ballerina"]
 export=["graphql", "graphql.subgraph", "graphql.dataloader"]
 keywords = ["gql", "network", "query", "service"]
@@ -16,11 +16,11 @@ graalvmCompatible = true
 [[platform.java11.dependency]]
 groupId = "io.ballerina.stdlib"
 artifactId = "graphql-native"
-version = "1.9.0"
-path = "../native/build/libs/graphql-native-1.9.0.jar"
+version = "1.9.1"
+path = "../native/build/libs/graphql-native-1.9.1-SNAPSHOT.jar"
 
 [[platform.java11.dependency]]
 groupId = "io.ballerina.stdlib"
 artifactId = "graphql-compiler-plugin"
-version = "1.9.0"
-path = "../commons/build/libs/graphql-commons-1.9.0.jar"
+version = "1.9.1"
+path = "../commons/build/libs/graphql-commons-1.9.1-SNAPSHOT.jar"
