--- a/ballerina-tests/Dependencies.toml
+++ b/ballerina-tests/Dependencies.toml
@@ -5,7 +5,7 @@
 
 [ballerina]
 dependencies-toml-version = "2"
-distribution-version = "2201.7.1-SNAPSHOT"
+distribution-version = "2201.7.0"
 
 [[package]]
 org = "ballerina"
