--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.caching=true
 group=io.ballerina.stdlib
 version=1.9.1-SNAPSHOT
-ballerinaLangVersion= 2201.7.0
+ballerinaLangVersion= 2201.7.0-20230620-082800-c0018aae
 
 checkstylePluginVersion=8.18
 spotbugsPluginVersion=4.5.1
