Update log version

--- a/gradle.properties
+++ b/gradle.properties
@@ -22,7 +22,7 @@ stdlibUrlVersion=2.3.0
 # Level 02
 stdlibConstraintVersion=1.3.0
 stdlibCryptoVersion=2.4.0
-stdlibLogVersion=2.8.0
+stdlibLogVersion=2.8.1-20230718-085900-36c385c
 stdlibOsVersion=1.7.0
 stdlibTaskVersion=2.4.0
 
