Remove lang timestamp version

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.caching=true
 group=io.ballerina.stdlib
 version=1.9.1-SNAPSHOT
-ballerinaLangVersion= 2201.7.0-20230620-082800-c0018aae
+ballerinaLangVersion=2201.7.0
 
 checkstylePluginVersion=8.18
 spotbugsPluginVersion=4.5.1
@@ -46,3 +46,4 @@ stdlibWebsocketVersion=2.9.1-20230718-133100-1515098
 # Ballerinax Observer
 observeVersion=1.1.0
 observeInternalVersion=1.1.0
+
