--- a/ballerina/build.gradle
+++ b/ballerina/build.gradle
@@ -96,6 +96,7 @@ publishing {
 
 updateTomlFiles.dependsOn copyStdlibs
 
+build.doNotTrackState("build needs to re-run every time")
 build.dependsOn "generatePomFileForMavenPublication"
 build.dependsOn ":${packageName}-native:build"
 build.dependsOn ":${packageName}-compiler-plugin:build"
