Update ballerina gradle plugin version

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ downloadPluginVersion=5.4.0
 releasePluginVersion=2.8.0
 testngVersion=7.6.1
 eclipseLsp4jVersion=0.12.0
-ballerinaGradlePluginVersion=2.0.1
+ballerinaGradlePluginVersion=2.0.1-SNAPSHOT
 jacocoVersion=0.8.10
 
 # Standard Library Dependencies
