--- a/ballerina/Ballerina.toml
+++ b/ballerina/Ballerina.toml
@@ -3,7 +3,7 @@ org = "ballerina"
 name = "graphql"
 version = "1.9.1"
 authors = ["Ballerina"]
-export=["graphql", "graphql.subgraph"]
+export=["graphql", "graphql.subgraph", "graphql.dataloader"]
 keywords = ["gql", "network", "query", "service"]
 repository = "https://github.com/ballerina-platform/module-ballerina-graphql"
 icon = "icon.png"
