--- a/gradle.properties
+++ b/gradle.properties
@@ -10,40 +10,40 @@ downloadPluginVersion=5.4.0
 releasePluginVersion=2.8.0
 testngVersion=7.6.1
 eclipseLsp4jVersion=0.12.0
-ballerinaGradlePluginVersion=2.0.1-SNAPSHOT
+ballerinaGradlePluginVersion=2.0.1
 jacocoVersion=0.8.10
 
 # Standard Library Dependencies
 # Level 01
-stdlibIoVersion=1.5.0
-stdlibTimeVersion=2.3.0
-stdlibUrlVersion=2.3.0
+stdlibIoVersion=1.6.0-20230810-115500-2e569f5
+stdlibTimeVersion=2.4.0-20230810-115600-b28bb07
+stdlibUrlVersion=2.4.0-20230810-111000-683c6e4
 
 # Level 02
-stdlibConstraintVersion=1.3.0
-stdlibCryptoVersion=2.4.0
-stdlibLogVersion=2.8.1-20230718-085900-36c385c
-stdlibOsVersion=1.7.0
-stdlibTaskVersion=2.4.0
+stdlibConstraintVersion=1.4.0-20230810-133100-e09cfc1
+stdlibCryptoVersion=2.5.0-20230810-124300-ddf6788
+stdlibLogVersion=2.9.0-20230810-161500-6d3d1df
+stdlibOsVersion=1.8.0-20230810-161400-624a2aa
+stdlibTaskVersion=2.5.0-20230810-145800-b191831
 
 # Level 03
-stdlibCacheVersion=3.6.0
-stdlibFileVersion=1.8.0
-stdlibMimeVersion=2.8.0
-stdlibUuidVersion=1.6.0
+stdlibCacheVersion=3.7.0-20230811-093200-b83e72c
+stdlibFileVersion=1.9.0-20230811-093200-875a787
+stdlibMimeVersion=2.9.0-20230810-183500-af95101
+stdlibUuidVersion=1.7.0-20230811-093200-dc65fdd
 
 # Level 04
-stdlibAuthVersion=2.9.0
-stdlibJwtVersion=2.9.0
-stdlibOAuth2Version=2.9.0
+stdlibAuthVersion=2.10.0-20230811-110600-2428623
+stdlibJwtVersion=2.10.0-20230811-114700-d48ab2f
+stdlibOAuth2Version=2.10.0-20230811-111300-5550652
+
+# Level 05
+stdlibHttpVersion=2.10.0-20230811-144100-cac5d57
 
 # Level 06
-stdlibHttpVersion=2.10.0-20230810-091800-926fe3e
-
-# Level 07
-stdlibWebsocketVersion=2.9.1-20230809-174700-6942521
+stdlibWebsocketVersion=2.10.0-20230811-170000-3c42125
 
 # Ballerinax Observer
-observeVersion=1.1.0
-observeInternalVersion=1.1.0
+observeVersion=1.2.0-20230810-105500-5841859
+observeInternalVersion=1.2.0-20230810-141300-a348751
 
