Address review suggestions

--- a/native/src/main/resources/META-INF/native-image/io.ballerina.stdlib/graphql-native/serialization-config.json
+++ b/native/src/main/resources/META-INF/native-image/io.ballerina.stdlib/graphql-native/serialization-config.json
@@ -47,6 +47,9 @@
     },
     {
       "name": "java.util.LinkedHashMap"
+    },
+    {
+      "name": "io.ballerina.stdlib.graphql.commons.utils.KeyDirectivesArgumentHolder"
     }
   ],
   "lambdaCapturingTypes": []
