--- a/.github/workflows/build-timestamped-master.yml
+++ b/.github/workflows/build-timestamped-master.yml
@@ -12,7 +12,7 @@ on:
     workflow_dispatch:
 
 jobs:
-    call_stdlib_workflow:
-        name: Run StdLib Workflow
+    call_workflow:
+        name: Run Build Workflow
         if: ${{ github.repository_owner == 'ballerina-platform' }}
         uses: ballerina-platform/ballerina-standard-library/.github/workflows/build-timestamp-master-template.yml@main
