--- a/.github/workflows/central-publish.yml
+++ b/.github/workflows/central-publish.yml
@@ -12,8 +12,8 @@ on:
                     - STAGE CENTRAL
 
 jobs:
-    call_stdlib_workflow:
-        name: Run StdLib Workflow
+    call_workflow:
+        name: Run Central Publish Workflow
         if: ${{ github.repository_owner == 'ballerina-platform' }}
         uses: ballerina-platform/ballerina-standard-library/.github/workflows/central-publish-template.yml@main
         with:
