--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -6,8 +6,8 @@ on:
         types: [ stdlib-release-pipeline ]
 
 jobs:
-    call_stdlib_workflow:
-        name: Run StdLib Workflow
+    call_workflow:
+        name: Run Release Workflow
         if: ${{ github.repository_owner == 'ballerina-platform' }}
         uses: ballerina-platform/ballerina-standard-library/.github/workflows/release-package-template.yml@main
         with:
