--- a/.github/workflows/build-timestamped-master.yml
+++ b/.github/workflows/build-timestamped-master.yml
@@ -16,3 +16,6 @@ jobs:
         name: Run Build Workflow
         if: ${{ github.repository_owner == 'ballerina-platform' }}
         uses: ballerina-platform/ballerina-standard-library/.github/workflows/build-timestamp-master-template.yml@main
+        with:
+            ballerina-bot-username: ${{ secrets.BALLERINA_BOT_USERNAME }}
+            ballerina-bot-token: ${{ secrets.BALLERINA_BOT_TOKEN }}
