--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -14,3 +14,7 @@ jobs:
             package-name: graphql
             package-org: ballerina
             additional-build-flags: '-x :graphql-examples:build'
+            ballerina-bot-username: ${{ secrets.BALLERINA_BOT_USERNAME }}
+            ballerina-bot-token: ${{ secrets.BALLERINA_BOT_TOKEN }}
+            ballerina-bot-email: ${{ secrets.BALLERINA_BOT_EMAIL }}
+            ballerina-central-access-token: ${{ secrets.BALLERINA_CENTRAL_ACCESS_TOKEN }}
