Set secret to inherit in  build, central publish and release workflow

--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -14,3 +14,4 @@ jobs:
             package-name: graphql
             package-org: ballerina
             additional-build-flags: '-x :graphql-examples:build'
+            secrets: inherit
