--- a/.github/workflows/central-publish.yml
+++ b/.github/workflows/central-publish.yml
@@ -18,3 +18,4 @@ jobs:
         uses: ballerina-platform/ballerina-standard-library/.github/workflows/central-publish-template.yml@main
         with:
             environment: ${{ github.event.inputs.environment }}
+            secrets: inherit
