Migrate trivy workflow to use centralized workflow

--- a/.github/workflows/trivy-scan.yml
+++ b/.github/workflows/trivy-scan.yml
@@ -3,34 +3,11 @@ name: Trivy
 on:
     workflow_dispatch:
     schedule:
-        -   cron: '30 20 * * *'
+        - cron: "30 20 * * *"
 
 jobs:
-    ubuntu-build:
-        name: Build on Ubuntu
-        runs-on: ubuntu-latest
-        steps:
-            -   uses: actions/checkout@v3
-            -   name: Set up JDK 17
-                uses: actions/setup-java@v3
-                with:
-                    distribution: 'temurin'
-                    java-version: 17.0.7
-
-            -   name: Build with Gradle
-                env:
-                    packageUser: ${{ github.actor }}
-                    packagePAT: ${{ secrets.GITHUB_TOKEN }}
-                run: ./gradlew build -x check -x test
-
-            -   name: Create lib directory if not exists
-                run: mkdir -p ballerina/lib
-
-            -   name: Run Trivy vulnerability scanner
-                uses: aquasecurity/trivy-action@master
-                with:
-                    scan-type: 'rootfs'
-                    scan-ref: '/github/workspace/ballerina/lib'
-                    format: 'table'
-                    timeout: '10m0s'
-                    exit-code: '1'
+    call_workflow:
+        name: Run Trivy Scan Workflow
+        if: ${{ github.repository_owner == 'ballerina-platform' }}
+        uses: ballerina-platform/ballerina-standard-library/.github/workflows/trivy-scan-template.yml@main
+        secrets: inherit
