Change Ballerina standard library to Ballerina Library

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@ eclipseLsp4jVersion=0.12.0
 ballerinaGradlePluginVersion=2.0.1
 jacocoVersion=0.8.10
 
-# Standard Library Dependencies
+# Ballerina Library Dependencies
 # Level 01
 stdlibIoVersion=1.6.0
 stdlibTimeVersion=2.4.0
