Add code analyzer for lang server

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.caching=true
 group=io.ballerina.stdlib
 version=1.11.1-SNAPSHOT
-ballerinaLangVersion=2201.8.5
+ballerinaLangVersion=2201.9.0-20240403-114600-ceb51559
 
 checkstylePluginVersion=10.12.0
 spotbugsPluginVersion=5.0.14
@@ -10,7 +10,7 @@ downloadPluginVersion=5.4.0
 releasePluginVersion=2.8.0
 testngVersion=7.6.1
 eclipseLsp4jVersion=0.12.0
-ballerinaGradlePluginVersion=2.0.1
+ballerinaGradlePluginVersion=2.2.4
 jacocoVersion=0.8.10
 
 # Ballerina Library Dependencies
