Adding Support for GraphQL Observability Metrics (#1852)
* [Automated] Update the native jar versions

* Add observability metric tags

* Update the metrics tags to use underscores

* Update the spec with observability section

* [Automated] Update the native jar versions

* Update the GraphQL spec with observability functionalities

* Apply suggestions from code review

Co-authored-by: DimuthuMadushan <35717653+DimuthuMadushan@users.noreply.github.com>

---------

Co-authored-by: DimuthuMadushan <35717653+DimuthuMadushan@users.noreply.github.com>

--- a/ballerina-tests/Dependencies.toml
+++ b/ballerina-tests/Dependencies.toml
@@ -83,6 +83,7 @@ dependencies = [
 	{org = "ballerina", name = "log"},
 	{org = "ballerina", name = "mime"},
 	{org = "ballerina", name = "oauth2"},
+	{org = "ballerina", name = "observe"},
 	{org = "ballerina", name = "task"},
 	{org = "ballerina", name = "time"},
 	{org = "ballerina", name = "uuid"},
